# upv-earth-planetary-boundaries

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  analisis_corpus_eda.py  docker-compose.yml  extraccion_corpus_mixto.py  extraccion_documents.ipynb  launch.ps1  launch.sh  llm_model_section_final_es-2.tex  llm_y_agentes_memoria_final_compacta.tex  main_overleaf_llm.tex  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.json
.github/workflows/: ci.yml
.runtime/pids/: backend.pid  frontend.pid
data/corpus/: corpus_1000_clean.csv
docs/: ENTREGA_VIDEO_3MIN.md  MUESTREO_ESTRATIFICADO.md  ORGANIZACION_REPO.md  bert_embeddings_inputs.md  flujo_extraccion_1000.md  guion_presentacion_EN.txt  guion_presentacion_ES.txt  guion_video_140s.txt  guion_video_180s_en.txt
docs/arquitectura/: diagramas-infraestructura.html
docs/eda/: AED_PLAN.md  corpus_distribution_analysis.ipynb  drop_reason_combinations.csv  eda_summary.md  null_table.csv  (+4 more)
launch-video/: MUSIC_SETUP.md  NEXT_STEPS.md  package-lock.json  package.json  tsconfig.json
mockup/: .env  .env.example  README.md  docker-compose.yml
notebooks/: 02_fine_tuning.ipynb
pipeline/: analyze_corpus_eda.py  extract_corpus.py  extract_corpus_balanced.py
scripts/: ## Plan Refinado: Plataforma UPV-EARTH v.prompt.md  ## Plan: Plataforma Web UPV-EARTH v1.prompt.md  aed_decade_wordclouds.py  aed_extended.py  aed_master.py  aed_metrics.py  aed_publication_trends.py  aed_rank_score.py  aed_success_formula.py  aed_validation.py  aed_validation_primary.py  assign_pb_final.py  web_services.sh
(+283 files in other folders)
