[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upv-earth"
version = "0.1.0"
description = "Mapping UPV scientific production onto the nine Planetary Boundaries"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Fernando Martínez Gómez" },
  { name = "Luis Trigueros Espada" },
  { name = "Sergio Ortiz Montesinos" },
  { name = "Sergio Domínguez Miró" },
  { name = "Maria Montolio Maximiano" },
  { name = "Alba Sanahuja Batalla" },
]
requires-python = ">=3.11,<3.12"
dependencies = [
  "jupyterlab>=3.6,<4.0",
  "ipykernel>=6.0",
  "ollama>=0.5.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pymupdf>=1.23",
  "langdetect>=1.0.9",
  "nltk>=3.8",
]

[project.optional-dependencies]
# Lexical, TF-IDF and transformer baselines (nlp/bert_finetuning/).
models = [
  "scikit-learn>=1.3",
  "torch>=2.0",
  "transformers>=4.35",
]

[tool.setuptools]
# The pipeline is a set of runnable scripts, not an importable package.
py-modules = []

